feat docs: add authorization token holder in swagger
