# internal/routereg/routereg.go
@@ -10,27 +10,6 @@ import (
 	_ "github.com/swaggo/swag"
 )
 
-// @title ITV Test Project API
-// @version 1.0
-// @description API for movie management
-// @termsOfService http://swagger.io/terms/
-
-// @contact.name API Support
-// @contact.url http://www.example.com/support
-// @contact.email support@example.com
-
-// @license.name Apache 2.0
-// @license.url http://www.apache.org/licenses/LICENSE-2.0.html
-
-// @host localhost:7777
-// @BasePath /api/v1
-
-// @securityDefinitions.apikey BearerAuth
-// @in header
-// @name Authorization
-// @description Type "Bearer" followed by a space and the JWT token.
-func SwaggerInfo() {}
-
 // RegisterRoutes registers all routes, injecting the necessary dependencies
 func RegisterMovieRoutes(router *gin.Engine, middleware *middleware.AuthHandler, handler *handlers.MovieHandler) {
 	// Swagger route
